[gd_scene load_steps=4 format=3 uid="uid://b11d4bw57h8go"]

[ext_resource type="Texture2D" uid="uid://dnj16tmydhxxv" path="res://Art Assets/UI/Top_UI_v_2.png" id="1_xs1p4"]
[ext_resource type="Script" path="res://Scripts/top_ui.gd" id="2_22iws"]
[ext_resource type="FontFile" uid="uid://bh15jb83w80uc" path="res://Art Assets/Fonts/PeaberryBase.ttf" id="2_m0wfx"]

[node name="TopUI" type="TextureRect"]
offset_left = 432.0
offset_top = 17.0
offset_right = 720.0
offset_bottom = 113.0
texture = ExtResource("1_xs1p4")
expand_mode = 1
script = ExtResource("2_22iws")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 11.0
offset_right = 92.0
offset_bottom = 45.0
theme_override_fonts/font = ExtResource("2_m0wfx")
theme_override_font_sizes/font_size = 17
text = "0000000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 28.0
offset_right = 172.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("2_m0wfx")
theme_override_font_sizes/font_size = 19
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveLabel" type="Label" parent="."]
offset_left = 218.0
offset_top = 17.0
offset_right = 261.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("2_m0wfx")
theme_override_font_sizes/font_size = 17
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
